<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version_name">0.3.4</string>

    <string name="app_name">Philippines</string>
    <string name="app_id">505521006146968</string>

    <string name="btn_enter">Enter</string>
    <string name="btn_overview">Overview</string>
    <string name="btn_climate">Climate</string>

    <string name="hdr_website">mytravel-asia.com</string>
    <string name="hdr_edit_comment">Edit Comment</string>
    <string name="hint_search">Search Places</string>

    <string name="lbl_my_travel">My Travel</string>
    <string name="lbl_my_travel_splash">MyTravel</string>
    <string name="lbl_asia">Asia</string>
    <string name="lbl_mytravel_ph">MyTravel PH</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_website">Website</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_map">Map</string>
    <string name="desc_poi_photo">POI Photo</string>
    <string name="msg_register_failed">Failed to login. Please try again</string>
    <string name="msg_must_login">You must be logged in to perform this action.</string>
    <string name="txt_post">Post</string>
    <string name="txt_empty">-</string>
    <string name="hint_comment">Write a comment</string>
</resources>
