<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@android:color/white"
            style="@style/LayoutMatchMatch">
    <LinearLayout android:orientation="vertical"
                  style="@style/LayoutMatchWrap">
        <LinearLayout android:orientation="vertical"
                      android:background="@color/blue"
                      android:paddingLeft="@dimen/side_padding"
                      android:paddingRight="@dimen/side_padding"
                      style="@style/LayoutMatchWrap">
            <TextView android:id="@+id/tv_poi_name"
                      style="@style/LayoutMatchWrap"
                      android:textSize="23sp"
                      android:textStyle="bold"
                      android:text="Rizal Park"/>
            <TextView android:id="@+id/tv_poi_address"
                      style="@style/LayoutMatchWrap"
                      android:text="123 Manila City"/>
        </LinearLayout>

        <RelativeLayout android:background="@color/gray"
                        android:paddingLeft="@dimen/side_padding"
                        android:paddingRight="@dimen/side_padding"
                        style="@style/LayoutMatchWrap">
            <TextView android:id="@+id/tv_comments"
                      android:layout_alignParentLeft="true"
                      android:text="1 Comment"
                      android:drawableLeft="@drawable/btn_comment"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
            <TextView android:id="@+id/tv_likes"
                      android:layout_alignParentRight="true"
                      android:drawableLeft="@drawable/btn_like"
                      android:textColor="@android:color/black"
                      android:text="1 Like"
                      style="@style/LayoutWrapWrap"/>
        </RelativeLayout>

        <RelativeLayout android:background="@color/light_gray"
                        android:paddingLeft="@dimen/side_padding"
                        android:paddingRight="@dimen/side_padding"
                        style="@style/LayoutMatchWrap">
            <TextView android:layout_alignParentLeft="true"
                      android:text="Telephone"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
            <TextView android:id="@+id/tv_telephone"
                      android:layout_alignParentRight="true"
                      android:text="@string/txt_empty"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
        </RelativeLayout>

        <RelativeLayout android:background="@color/light_gray"
                        android:paddingLeft="@dimen/side_padding"
                        android:paddingRight="@dimen/side_padding"
                        style="@style/LayoutMatchWrap">
            <TextView android:layout_alignParentLeft="true"
                      android:text="@string/lbl_website"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
            <TextView android:id="@+id/tv_website"
                      android:layout_alignParentRight="true"
                      android:text="@string/txt_empty"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
        </RelativeLayout>

        <RelativeLayout android:background="@color/light_gray"
                        android:paddingLeft="@dimen/side_padding"
                        android:paddingRight="@dimen/side_padding"
                        style="@style/LayoutMatchWrap">
            <TextView android:layout_alignParentLeft="true"
                      android:text="@string/lbl_email"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
            <TextView android:id="@+id/tv_email"
                      android:layout_alignParentRight="true"
                      android:text="@string/txt_empty"
                      android:textColor="@android:color/black"
                      style="@style/LayoutWrapWrap"/>
        </RelativeLayout>

        <TextView android:id="@+id/tv_description"
                  android:paddingLeft="@dimen/side_padding"
                  android:paddingRight="@dimen/side_padding"
                  android:text="The quick brown fox jumps over the lazy dog"
                  android:textColor="@android:color/black"
                  style="@style/LayoutMatchWrap"/>
    </LinearLayout>
</ScrollView>